# ekom-orakel

./: .gitignore  CLAUDE.md  CORRECTIONS.md  DESIGNMAL.md  QUERY_LOG.md  README.md  pyproject.toml
.claude/commands/: compush.md  graf.md  listhist.md  loggpush.md  ny.md  tilbilde.md  tilxl.md
examples/: fbb_100mbit_eller_fiber.py  fiber_hc_spredtbygd.py  fiber_kabel_egen_tettsted.py  test1.py
