[project]
name = "auto-uttrekk"
version = "0.1.0"
description = "Bredbåndsdekning-uttrekk med Polars"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.3",
    "matplotlib>=3.10.8",
    "polars>=1.20.0",
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["library"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
